--- a/home.html
+++ b/home.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     
-    <div class="header" >
-<H1>Sree Harsha S</H1>
+    <div class="name" >
+<H1>Shwetha H S</H1>
     </div>
     <ul class="navbar">
         <li><img src="images/logo.gif" alt="LOGO" class="logo"></li>
         <li><a href="home.html">home</a></li>
-        <li><a href="education/education.html">education</a></li>
-        <li><a href="gallery/gallery.html">gallery</a></li>
-        <li><a href="contact/contact.html">contact me</a></li>
+        <li><a href="education.html">education</a></li>
+        <li><a href="gallery.html">gallery</a></li>
+        <li><a href="contact.html">contact me</a></li>
         <li class="search"> <input type="text" placeholder="search...."> <button>search</button></li>
     </ul>
     <section class="personal">
         <div class="summary1">
-            <img src="images/user.png" alt="profile picture" class="profile">
+            <img src="images/user.jpg" alt="profile picture" class="profile">
         </div>
         
         <div class="summary2">
-            <p>Web Developer specializing in Full stack development.Experienced with few web projects. Well-versed in numerous programming languages including HTML5, JavaScript, CSS, PostgreSQL, MySQL, Python. Working as Trainee Software Engineer in Caritor Solutions India Pvt where am undergoing training on Full Stack Development.   </p>
+            <p>Web Developer specializing in Full stack development.Experienced with few web projects. Well-versed in programming languages including HTML5, CSS, bootstrap, and Javascript. Working on web development skills to achieve excellence.   </p>
         </div>
     </section>
     <section>
@@ -34,16 +34,16 @@
             <h2>My Hobbies</h2>
             <ul>
                 <li class="lia">
-                    <p>Basketball</p>
+                    <p>Dancing</p>
                 </li>
                 <li class="lia">
                     <p>Traveling</p>
                 </li>
                 <li class="lia">
-                    <p>Cycling</p>
+                    <p>Reading books</p>
                 </li>
                 <li class="lia">
-                    <p>Swimming</p>
+                    <p>Yoga</p>
                 </li>
             </ul>
         </div>
@@ -51,16 +51,10 @@
             <h2>My Contact</h2>
             <ul>
                 <li class="lib">
-                    <p>Phone: 8951403988</p>
+                    <p>Phone: 9448379467</p>
                 </li>
                 <li class="lib">
-                    <p>Email: iam.harshagowda@gmail.com</p>
-                </li>
-                <li class="lib">
-                    <p><a href="https://www.linkedin.com/in/sree-harsha-s-3a25b522a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BJlmjXP8WQcq4ea3%2FRoqz5w%3D%3D">Linkedin</a></p>
-                </li>
-                <li class="lib">
-                    <p><a href="https://www.instagram.com/harsha_s_gowda/">Instagram</a></p>
+                    <p>Email: hsshwetha77@gmail.com</p>
                 </li>
             </ul>
         </div>
