--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <ul class="navbar">
         <li><img src="images/logo.gif" alt="LOGO" class="logo"></li>
-        <li><a href="home.html">home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="education.html">education</a></li>
         <li><a href="gallery.html">gallery</a></li>
         <li><a href="contact.html">contact me</a></li>
